# AmiOS

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  linker.ld  rust-toolchain.toml
.cargo/: config.toml
kernel/: .platform_stamp  Cargo.toml  build.rs  linker-d2000.lds  linker-qemu.lds  linker.lds.S
kernel/.cargo/: config.toml
kernel/src/: batch.rs  main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: boot.S  boot.rs  mod.rs  psci.rs  uart_debug_phytium.S  uart_debug_qemu.S
kernel/src/arch/aarch64/boot/: boot.S  boot.rs  mod.rs
kernel/src/arch/aarch64/bsp/: mod.rs
kernel/src/arch/aarch64/bsp/phytium_d2000/: mod.rs
kernel/src/arch/aarch64/bsp/qemu/: mod.rs
kernel/src/arch/aarch64/trap/: mod.rs  trap.S
kernel/src/bsp/: mod.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/uart/: mod.rs  pl011.rs
kernel/src/kernel/: io.rs  mod.rs
kernel/src/syscall/: mod.rs
loader/: Cargo.toml
loader/.cargo/: config.toml
loader/src/: main.rs
src/: boot.rs  main.rs  uart.rs
src/platform/: mod.rs
tests/: Cargo.toml
tests/.cargo/: config.toml
tests/src/: lib.rs
user/: Cargo.toml  build.rs
user/.cargo/: config.toml
user/src/: console.rs  entry.S  lang_items.rs  lib.rs  linker.ld  linker.ld.S  syscall.rs
