[package]
name = "amios"
version = "0.1.0"
edition = "2021"

# 平台特性标志，用于条件编译不同硬件平台的驱动参数
# 默认使用 QEMU virt 虚拟机，方便开发调试
[features]
default = ["qemu-virt"]
qemu-virt = []        # QEMU virt 虚拟机（UART 基地址 0x09000000）
phytium-d2000 = []    # 飞腾 D2000 真实硬件（UART 基地址 0x28001000）

# release 构建优化：减小二进制体积，适合嵌入式场景
[profile.release]
opt-level = "s"    # 优化代码体积（s = size）而非速度
lto = true         # 链接时优化，进一步减小体积
codegen-units = 1  # 单编译单元，允许更激进的优化
panic = "abort"    # panic 时直接中止，不展开栈（裸机无法展开）
strip = false      # 保留调试符号，方便 GDB 调试

[profile.dev]
panic = "abort"    # dev 模式同样禁用栈展开
